src/test/ui/unboxed-closures/unboxed-closure-sugar-equiv.stderr
error[E0277]: the trait bound `dyn Foo<(char,), Output = ()>: Eq<dyn Foo<(), Output = ()>>` is not satisfied
  --> $DIR/unboxed-closure-sugar-equiv.rs:43:5
   |
LL | /     eq::< dyn Foo<(),Output=()>,
LL | |           dyn Foo(char)                                               >();
   | |_______________________________________________________________________^ the trait `Eq<dyn Foo<(), Output = ()>>` is not implemented for `dyn Foo<(char,), Output = ()>`
   |
note: required by `eq`
  --> $DIR/unboxed-closure-sugar-equiv.rs:16:1
   |
LL | fn eq<A: ?Sized,B: ?Sized +Eq<A>>() { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
